| Summary: | ASTERISK-24737: When agent not logged in, agent status shows unavailable, queue status shows agent invalid | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2015-01-29 15:51:58.000-0600 | Date Closed: | 2015-01-30 11:45:20.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_agent_pool |
| Versions: | 13.1.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The initial status from {{app_agent_pool}} agents reported to other modules in the system after the initial module load is not correct.
# Define an {{app_agent_pool}} agent in {{agents.conf}} {noformat} [agent1] {noformat} # Define a queue agent from {{app_agent_pool}} in {{queues.conf:}} {noformat} [my_queue] member => Local/agent1@sip,0,May Flowers,Agent:agent1 joinempty=unavailable {noformat} # Start asterisk # Notice the response from CLI "agent show <agentname>": {noformat} lab_controller*CLI> agent show agent1 Id: agent1 Name: Beep: beep MOH: default RecordCalls: No State: UNAVAILABLE {noformat} # Now, when I examine the agent status with CLI "queue show <queuename>": {noformat} lab_controller*CLI> queue show my_queue my_queue has 0 calls (max unlimited) in 'ringall' strategy (0s holdtime, 0s talktime), W:0, C:0, A:0, SL:0.0% within 0s Members: May Flowers (Local/agent1@sip from Agent:agent1) (ringinuse enabled) (Invalid) has taken no calls yet {noformat} agent status is {{Invalid}} and not the expected {{Unavailable}}. | ||
| Comments: | |||